Fix RTL when dragging downloads and make dragging more Mac-like.

RTL was missing from this particular part of MD downloads. This change:

1. Adds RTL support.

2. Changes the look slightly overall to match dragging on macOS: instead of a
   representation of the file appearing under the mouse pointer, dragging
   creates a copy of the icon and text seen in the shelf, which start off in
   their original spots. (I tried this while I was working on RTL).

Change-Id: I766d61227d04541f1beecf93adf87464da5a020b
Bug: 825849
Reviewed-on: https://chromium-review.googlesource.com/979195
Reviewed-by: Leonard Grey <lgrey@chromium.org>
Commit-Queue: Sidney San Martín <sdy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545861}
Former-commit-id: 20551064d1dd275d1264d4b2543e8b9fb1f934f8